top align fix

--- a/style/style.scss
+++ b/style/style.scss
@@ -23,7 +23,7 @@ body {
 
             background-size: contain;
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: top;
         }
 
         .container1 {
